--- a/src/components/Teacher/TeacherPanel.css
+++ b/src/components/Teacher/TeacherPanel.css
@@ -106,3 +106,159 @@
   color: white;
   border-color: #08213b;
 }
+
+.date-day button{
+  margin-right: 10px;
+  margin-bottom: 10px;
+  padding: 6px 12px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  background-color: #f5f5f5;
+  cursor: pointer;
+  font-size: 14px;
+  margin-top: 1rem;
+}
+
+.close-buttons{
+  display: flex;
+  justify-content: end;
+}
+
+.close-buttons button {
+  margin-right: 10px;
+  margin-bottom: 10px;
+  padding: 6px 12px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  background-color: #f5f5f5;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.close-buttons button.active {
+  background-color: #153557;
+  color: white;
+}
+
+.filter button{
+  margin-right: 10px;
+  margin-bottom: 20px;
+  padding: 6px 12px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  background-color: #f5f5f5;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.filter button.active {
+  background-color: #153557;
+  color: white;
+  border-color: #08213b;
+}
+
+@media screen and (max-width: 768px) {
+
+  .student-container{
+    width: 100%;
+    margin: 0%;
+    padding: 0%;
+    margin-top: 3.5rem;
+  }
+}
+
+
+/* TechProfile.css */
+
+.techprofile-container {
+  max-width: 800px;
+  margin: 40px auto;
+  margin-bottom: 20px;
+  padding: 6px 12px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  background-color: #f5f5f5;
+  font-size: 14px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+}
+
+.techprofile-container h2 {
+  text-align: center;
+  color: #333;
+  margin-bottom: 25px;
+  font-size: 28px;
+}
+
+.techprofile-container p {
+  font-size: 16px;
+  margin-bottom: 15px;
+  color: #555;
+}
+
+.techprofile-container .form-section {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 25px;
+}
+
+.techprofile-container .form-section input {
+  flex: 1;
+  padding: 10px 15px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+}
+
+.techprofile-container .form-section button {
+  padding: 10px 20px;
+  background-color: #142835;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.techprofile-container .form-section button:hover {
+  background-color: #21497e;
+}
+
+.techprofile-container h3 {
+  color: #333;
+  margin-bottom: 15px;
+}
+
+.techprofile-container ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.techprofile-container ul li {
+  padding: 10px 15px;
+  margin-bottom: 10px;
+  background-color: #dfdfdf7a;
+  border-left: 5px solid #25305e;
+  border-radius: 6px;
+  color: #333;
+  font-size: 15px;
+}
+
+.techprofile-containerul li strong {
+  color: #222;
+}
+
+.tech-data{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.tech-data button{
+  padding: 5px 10px;
+  border-radius: 0.3rem;
+  border: 1px solid rgba(128, 128, 128, 0.329);
+  cursor: pointer;
+  margin-left: 10px;
+}
